# Nebula-Music

./: CMakeLists.txt  Main.qml  README.md  com.nebula.Tahoe.desktop  com.nebula.Tahoe.yml  main.cpp  player.h  resources.qrc
